--- a/src/style-pag3.css
+++ b/src/style-pag3.css
@@ -25,6 +25,7 @@
     width: 100%;
     height: 100vh;
     object-fit: cover;
+    
    
 }
 h2{
@@ -52,22 +53,31 @@ p{
     padding: 2em;
     padding-top: 1em;
     text-align: justify;
-    jus
+   
 }
 
 .footer{
-    background-color:  rgb(7, 168, 168);
     display: flex;
-    align-items: right;
-    justify-content: end;
     bottom: 0;
     position: fixed;
     width: 100%;
+    justify-content:space-between;
+    align-items:flex-end;
     
 }
-#botao{
-    padding: 1em;
-    height: 250px;
-    width: 250x;
-
+#botao1{
+    width: 80%;
+    width: 100%;
+    align-items: left;
+    justify-content: left;
+    padding-left:5em;
+    padding-bottom: 3em;
+}
+#botao2{
+    width: 80%;
+    width: 100%;
+    align-items: right;
+    justify-content: right;
+    padding-right:5em;
+    padding-bottom: 3em;
 }
