--- a/src/style-pag6.css
+++ b/src/style-pag6.css
@@ -6,7 +6,7 @@
 
 }
 #home{
-    background-color: rgb(199, 235, 235);
+    background-color: #0096BB;
     display: grid;
     grid-template-areas:
         "b . .  a"
@@ -14,7 +14,52 @@
         "b . .  a";
    
 }
+#texto-esquerda img{
+    width:80%;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    justify-content: left;
+    align-items: left;
+}
+h1{
+    font-size: 120px;
+    font-family: 'Open Sans', sans-serif;
+    position: relative;
+    display: flex;
+    color: rgb(0, 0, 0);
+    padding-left: 2.5em;
+    padding-bottom: 1em;
 
+}
+
+#texto-esquerda{
+    width:100%;
+    height: 100vh;
+    display: flex;
+    grid-area: b;
+    align-items: center;
+    padding: 6em;
+    
+   
+}
+
+#texto-direita{
+    display: flex;
+    grid-area: a;
+    align-items: center;
+    justify-content: center;
+    padding: 6em;
+
+}
+#texto-direita img{
+    width:100%;
+    height: 70vh;
+    object-fit: cover;
+    position: relative;
+    
+    
+}
 
 p{
     font-size: 70px;
@@ -24,8 +69,10 @@ p{
     padding-left: 6em;
     padding-top: 1em;
     text-align: justify;
+     
 }
 
+ 
 .footer{
     display: flex;
     bottom: 0;
@@ -40,12 +87,13 @@ p{
     width: 300px;
     align-items: left;
     justify-content: left;
-    padding-left:5em;
+    padding-left:7em;
     padding-bottom: 3em;
+    
 }
 #botao2{
-    height: 250px;
-    width: 300px;
+    width: 60%;
+    width: 100%;
     align-items: right;
     justify-content: right;
     padding-right:5em;
@@ -53,7 +101,7 @@ p{
 }
 #barra{
     height: 160px;
-    width: 85%;
+    width: 80%;
     padding-bottom:1em;
     
 }
