--- a/src/style.css
+++ b/src/style.css
@@ -124,7 +124,47 @@ p{
     padding-bottom: 3em;
 }
 
+@media only screen and (max-device-width: 900px) {
+    #home { 
+        width:100%; 
+    }
+    }
+    #logo {
+        width:100%;
+        height: 10em;
 
-@media (max-widh: 1166px) {
+    }   
     
-}
+    #texto-central{
+        width:100%; 
+
+        
+    }
+    #forma{
+        width: 100%;
+        height: 100vh;
+    }
+    
+    .footer{
+        width: 100%;
+    }
+    #titulo h1{
+        color: white;
+        font-size: 70px;
+        font-weight: 800;
+    }
+    #titulo h2{
+        color: white;
+        font-size: 40px;
+        font-weight: 400;
+    }
+    #botao1{
+        height: 10em;
+        width: 100%;
+    }
+    #botao2{
+        height: 10em;
+        width: 100%;
+    }
+    
+
