--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,8 @@
     object-fit: cover;
     opacity: .8;
     position: absolute;
+    justify-content: center;
+    align-items: center;
 }
 
 #titulo{
@@ -124,7 +126,7 @@ p{
     padding-bottom: 3em;
 }
 
-@media only screen and (max-device-width: 900px) {
+@media only screen and (min-device-width: 900px) {
     #home { 
         width:100%; 
     }
@@ -150,7 +152,7 @@ p{
     }
     #titulo h1{
         color: white;
-        font-size: 70px;
+        font-size: 60px;
         font-weight: 800;
     }
     #titulo h2{
@@ -168,3 +170,27 @@ p{
     }
     
 
+    @media (min-width: 1024px) {
+        #home { 
+            width:100%; 
+        }
+        }
+        #logo {
+            width:100%;
+            height: 10em;
+    
+        }   
+        
+        #texto-central{
+            width:100%; 
+    
+            
+        }
+        #forma{
+            width: 100%;
+            height: 100vh;
+
+        }
+        
+        
+    
