--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,9 @@
 }
 
 
+
+/* SLIDE HOME */
+
 #home{
     width: 100%;
     height: 100vh;
@@ -17,8 +20,6 @@
         "c . b  a"
         "c . b  ."
         "c . b  .";
-   
-
 }
 
 #logo{
@@ -30,9 +31,10 @@
 }
 
 #logo img{
-    width: 300px;
-    height: 200px;
-    padding: 30px;
+    width: 250px;
+    height: 150px;
+    padding: 20px;
+    position: fixed;
 }
 
 #texto-central{
@@ -40,16 +42,17 @@
     justify-content: center;
     align-items: center;
     grid-area: b;
+    position: relative;
 }
 
 #forma{
-    width: 70%;
-    height: 100vh;
-    object-fit: cover;
+    width: 65%;
+    height: 70vh;
     opacity: .8;
     position: absolute;
     justify-content: center;
     align-items: center;
+    object-fit: cover;
 }
 
 #titulo{
@@ -60,16 +63,87 @@
 }
 #titulo h1{
     color: white;
-    font-size: 120px;
+    font-size: 60px;
     font-weight: 800;
 }
 
 #titulo h2{
     color: white;
-    font-size: 60px;
+    font-size: 30px;
     font-weight: 600;
 
 }
+
+.footer{
+    display: flex;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    justify-content:space-between;
+    align-items:flex-end;
+    
+}
+.botoes{
+    width: 200px;
+    height: auto;
+    padding: 30px;
+}
+
+.botoes:hover{
+    scale: 1.1;
+    transition: .3s;
+}
+
+
+
+
+
+@media (min-width: 480px) {
+    #forma{
+        object-fit: contain;
+        scale: 1.4;  
+    }
+
+    #titulo h1{
+        font-size: 60px;
+    }
+    
+    #titulo h2{
+        font-size: 40px;
+    
+    }
+}
+
+
+@media (min-width:768px) and (max-width: 992px) {
+    #logo img{
+        width: 300px;
+        height: 200px;
+        padding: 20px;
+
+    }
+    #forma{
+        scale: 2;
+        height: 50vh;
+    }
+
+    .botoes{
+        width: 350px;
+    }
+}
+
+
+
+
+
+
+
+
+/* SLIDE APRESENTAÇÃO */
+
+
+
+
 #titulo h3{
     color: black;
     font-size: 60px;
@@ -100,97 +174,7 @@ p{
     object-fit: cover;
 }
 
-.footer{
-    display: flex;
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    justify-content:space-between;
-    align-items:flex-end;
-    
-}
-#botao1{
-    width: 80%;
-    width: 100%;
-    align-items: left;
-    justify-content: left;
-    padding-left:5em;
-    padding-bottom: 3em;
-}
-#botao2{
-    width: 80%;
-    width: 100%;
-    align-items: right;
-    justify-content: right;
-    padding-right:5em;
-    padding-bottom: 3em;
-}
 
-@media only screen and (min-device-width: 900px) {
-    #home { 
-        width:100%; 
-    }
-    }
-    #logo {
-        width:100%;
-        height: 10em;
 
-    }   
-    
-    #texto-central{
-        width:100%; 
 
-        
-    }
-    #forma{
-        width: 100%;
-        height: 100vh;
-    }
-    
-    .footer{
-        width: 100%;
-    }
-    #titulo h1{
-        color: white;
-        font-size: 60px;
-        font-weight: 800;
-    }
-    #titulo h2{
-        color: white;
-        font-size: 40px;
-        font-weight: 400;
-    }
-    #botao1{
-        height: 10em;
-        width: 100%;
-    }
-    #botao2{
-        height: 10em;
-        width: 100%;
-    }
-    
-
-    @media (min-width: 1024px) {
-        #home { 
-            width:100%; 
-        }
-        }
-        #logo {
-            width:100%;
-            height: 10em;
-    
-        }   
-        
-        #texto-central{
-            width:100%; 
-    
-            
-        }
-        #forma{
-            width: 100%;
-            height: 100vh;
-
-        }
-        
-        
-    
+  
