--- a/src/style/style-pag12-13-14.css
+++ b/src/style/style-pag12-13-14.css
@@ -23,20 +23,20 @@
     position: absolute;
 }
 #texto-direita{
-
     display: flex;
     grid-area: a;
-    align-items:center;
-    justify-content:flex-end;
+    align-items:right;
+    justify-content:center;
     
 
 }
 #texto-direita img{
-   
+    width: 100%;
+    height:90vh;
     object-fit: cover;
-    max-width: 500px;
-    padding-top: 10em;
-    padding-right: 3em;
+    max-width: 400px;
+    padding-top: 2em;
+    
 }
 p{
     font-size: 25px;
@@ -70,32 +70,13 @@ p{
     align-items:flex-end;
     
 }
-#botao1{
+.botoes{
+    width: 200px;
+    height: auto;
+    padding: 30px;
+}
 
-    width: 150px;
-    align-items: left;
-    justify-content: left;
-    padding-left:5em;
-    padding-bottom: 3em;
-}
-#botao2{
-    width:  150px;
-    align-items: right;
-    justify-content: right;
-    padding-right:5em;
-    padding-bottom: 3em;
-}
-#barra{
-    height: 100px;
-    width: 80%;
-    padding:1em;
-    
-}
-#botao1:hover{
-    scale: 1.1;
-    transition: .3s;
-}
-#botao2:hover{
+.botoes:hover{
     scale: 1.1;
     transition: .3s;
 }
