--- a/src/style-pag1-2.css
+++ b/src/style-pag1-2.css
@@ -109,12 +109,20 @@
         font-size: 40px;
     
     }
+
     #titulo-apresentacao{
         font-size: 60px;
     }
     #texto p{
         font-size: 30px;
     }
+
+    #texto p{
+        text-align: justify;  
+        font-size: 600px;
+        padding: 30px;
+    }
+
 }
 
 
@@ -133,11 +141,8 @@
     .botoes{
         width: 350px;
     }
-    #img-apresenta{
-        scale: 1;
-        height: 40vh;
-  
-}
+    
+    
 }
 
 
@@ -150,42 +155,48 @@
 /* SLIDE APRESENTAÇÃO */
 
 
-
-
-#titulo-apresentacao{
-    padding-bottom: 0.5em;
-    padding-top: 0.5em;
-    font-size: 60px;
-    font-weight: 600;
-    font-family: 'Open Sans', sans-serif;
-    position: relative;
-    text-align: center;
-    color: black;
-    font-weight: bold;
-}
-#texto p{
-    text-align: justify;
-    font-size: 30px;
-    position: relative;
-    font-family: 'Open Sans';
-    padding: 1em;
-    color: black;
+#container{
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 
 #texto{
     width: 100%;
-
+    height: 50vh;
 }
+
+#titulo-apresentacao{
+    font-size: 60px;
+    font-weight: 600;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    color: black;
+    font-weight: bold;
+    
+}
+#texto p{
+    text-align: center;   /* MUDAR PARA JUSTIFY QUANDO FIZER O RESPONSIVO */
+    font-size: 30px;
+    font-family: 'Open Sans';
+    color: black;
+    align-items: center;
+    padding: 30px;
+}
+
+
+
 #imagem-tela{
-   background-image: url(imagens/pag2/img-apresenta.png);
-   background-repeat: no-repeat;
-   background-size: cover;
-    height: 100vh;
     width: 100%;
-
+    height: 50vh;
 }
 
+#imagem-tela img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
   
