--- a/src/style/style-pag7a10.css
+++ b/src/style/style-pag7a10.css
@@ -5,30 +5,32 @@
 
 }
 #home{
-    background-color:#ffffff;
-    display: grid;
-    grid-template-areas:
-    "c . b  ."
-    "c . b  ."
-    "c . b  a";
-   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;   
+    position: relative;
 }
+
+
 #imagem-direita{
     display: flex;
-    grid-area: a;
     align-items: center;
-    justify-content: center;
-    padding-right: 2em;
+    justify-content: flex-end;
+    width: 1000px;
+    height: 1000px;
+    background-color: red;
+    
  
 
 }
 #imagem-direita img{
-    width:100%;
-    height: 70vh;
-    object-fit: cover;
-    position: relative;
-    float: left;
-    margin: 0 10px 10px 0;
+    width: 250px;
+    height: auto;
+    position: absolute;
+    
 }
 #forma{
     width: 90%;
@@ -43,6 +45,9 @@
 }
 
 #texto-central{
+    width: 70%;
+    height: 70vh;
+    background-color: #0096BB;;
     display: flex;
     justify-content: center;
     align-items: left;
@@ -83,15 +88,7 @@
     align-items:flex-end;
     
 }
-.footer{
-    display: flex;
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    justify-content:space-between;
-    align-items:flex-end;
-    
-}
+
 #botao1{
 
     width: 200px;
@@ -115,4 +112,9 @@
 #botao2:hover{
     scale: 1.1;
     transition: .3s;
+}
+
+
+.esconder{
+    display: none;
 }
