--- a/src/style/style-pag15a18.css
+++ b/src/style/style-pag15a18.css
@@ -6,52 +6,62 @@
 
 }
 #home{
-    
-    display: grid;
-    grid-template-areas:
-        "b . .  a"
-        "b . .  a"
-        "b . .  a"
+    display:flex;
+	flex-direction:row;
+    justify-content: center;
+    align-items: center;
+   
 }
 p{
     font-size: 25px;
-    position: relative;
     font-family: 'Open Sans';
     color: rgb(0, 0, 0);
-    padding-left: 4em;
     text-align: justify;
+    padding: 3em;
 }
 
  
 h1{
     font-size: 40px;
     font-family: 'Open Sans', sans-serif;
-    position: relative;
-    text-align: left;
+    text-align: center;
     color: rgb(255, 255, 255);
     font-weight: 700;
-    padding-left: 3em;
-    padding-bottom: 1em;
+    padding-bottom: 3em;
+    
 
 }
 #texto-esquerda{
     background-color: #0096BB;
     width:100%;
     height: 100vh;
-    display: flex;
-    grid-area: b;
-    justify-content: left;
-    align-items: center;
-}
-#texto-direita{
-    display: flex;
-    grid-area: a;
-    align-items:flex-start;
+    display:flex;
+	flex-direction:column;
     justify-content: center;
-    padding: 5em;
+    align-items: center;
 
 }
 
+#texto-direita{
+    width:100%;
+    height: 100vh;
+    display:flex;
+	flex-direction:column;
+    justify-content: center;
+    align-items: center;
+
+}
+#texto-esquerda img{
+    width:500px;
+    height: 400px;
+    
+
+}
+#texto-direita img{
+    width:600px;
+    height: 400px;
+    
+}
 
 
 
