--- a/src/style/style-pag3.css
+++ b/src/style/style-pag3.css
@@ -6,54 +6,66 @@
 
 }
 #home{
-    
-    display: grid;
-    grid-template-areas:
-        ". . .  a"
-        ". . .  a"
-        ". . .  a";
+    display:flex;
+	flex-direction:row;
+    justify-content: center;
+    align-items: center;
    
-}
-.container{
-    width: 100%;
-    height: 10vh;
-    display: flex;
-
-
-}
-#foto img{
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    
-   
-}
-h2{
-    font-size: 40px;
-    font-family: 'Open Sans';
-    color: black;
-    text-align: left;
-    padding:1em;
-
-}
-#texto{
-    width: 50%;
-    height: 70vh;
-    grid-area: a;
- 
-    
-
 }
 p{
-    font-size: 20px;
-    position: relative;
+    font-size: 25px;
     font-family: 'Open Sans';
     color: rgb(0, 0, 0);
-    padding: 2em;
-    padding-top: 1em;
     text-align: justify;
-   
+    padding-left: 3em;
+    padding: 1em;
+    
 }
+ul{
+    padding-left: 3em;
+
+}
+li{
+    font-size: 25px;
+    font-family: 'Open Sans';
+    color: rgb(0, 0, 0);
+    text-align: justify;
+    padding: 1em;
+}
+ 
+h2{
+    font-size: 30px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: left;
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+    padding-left: 3em;
+    padding: 1em;
+    
+
+}
+#texto-esquerda{
+    width:100%;
+    height: 100vh;
+    display:flex;
+	flex-direction:column;
+
+}
+
+#texto-direita{
+    width:100%;
+    height: 100vh;
+    display:flex;
+	flex-direction:column;
+    justify-content: center;
+  
+
+}
+#texto-esquerda img{
+    width:100%;
+    height: 100vh;
+}
+    
 
 .footer{
     display: flex;
