--- a/src/style/style-pag19-20.css
+++ b/src/style/style-pag19-20.css
@@ -6,10 +6,11 @@
 
 }
 #home{
-    display:flex;
-	flex-direction:row;
+    display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100vh;   
    
 }
 p{
