--- a/src/style/style-pag19-20.css
+++ b/src/style/style-pag19-20.css
@@ -23,10 +23,10 @@ p{
 
  
 h1{
-    font-size: 30px;
+    font-size: 40px;
     font-family: 'Open Sans', sans-serif;
     text-align: left;
-    color: rgb(0, 0, 0);
+    color: #393A3F;
     font-weight: 700;
     padding-left: 2em;
     
