--- a/src/style/style-pag15a18.css
+++ b/src/style/style-pag15a18.css
@@ -5,20 +5,6 @@
     box-sizing: border-box;
 
 }
-#home{
-    display:flex;
-	flex-direction:row;
-    justify-content: center;
-    align-items: center;
-   
-}
-p{
-    font-size: 25px;
-    font-family: 'Open Sans';
-    color: rgb(0, 0, 0);
-    text-align: justify;
-    padding: 3em;
-}
 
  
 h1{
@@ -31,6 +17,7 @@ h1{
     
 
 }
+
 #texto-esquerda{
     background-color: #0096BB;
     width:100%;
@@ -62,10 +49,6 @@ h1{
     height: 400px;
     
 }
-
-
-
-
 .footer{
     display: flex;
     bottom: 0;
@@ -84,4 +67,131 @@ h1{
 .botoes:hover{
     scale: 1.1;
     transition: .3s;
+}
+
+p{
+    font-size: 25px;
+    font-family: 'Open Sans';
+    color: rgb(0, 0, 0);
+    text-align: justify;
+    padding: 3em;
+}
+
+
+
+
+
+
+
+
+/* RESPONSIVIDADE */
+
+@media (max-width: 480px) {
+
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+
+        width:100%;
+        height: 50vh;
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 50vh;
+    
+    
+    }
+    #gif{
+        width:100%;
+        height: 50vh;
+    }
+    p{
+        font-size: 25px;
+    }    
+
+    #texto-direita img{
+        width:800px;
+        height: 600px;
+        
+    }
+    h1{
+        font-size: 50px;
+    }
+    .botoes{
+        width: 250px;
+    }
+
+}
+@media (min-width:480px) and (max-width: 992px) {
+   
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+        width:100%;
+        height: 50vh;
+    
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 50vh;
+    
+    }
+    #gif{
+        width:100%;
+        height: 50vh;
+    }
+    .botoes{
+        width: 350px;
+    }
+    h1{
+        font-size: 50px;
+        padding-bottom: 1em;
+        padding-top: 1em;
+    }
+    .botoes{
+        width: 250px;
+    }
+
+}
+
+@media  (min-width: 992px) {
+
+#home{
+    display:flex;
+	flex-direction:row;
+    justify-content: center;
+    align-items: center;
+   
+}
+#texto-esquerda{
+    width:100%;
+    height: 100vh;
+
+
+
+}
+
+#texto-direita{
+    width:100%;
+    height: 100vh;
+ 
+
+}
+#texto-esquerda img{
+    width:400px;
+    height: 300px;
+    
+
+}
+#texto-direita img{
+    width:400px;
+    height: 300px;
+    
+}
+
+
 }
