--- a/src/style/style-pag19-20.css
+++ b/src/style/style-pag19-20.css
@@ -85,3 +85,89 @@ h1{
     scale: 1.1;
     transition: .3s;
 }
+
+
+/* RESPONSIVIDADE */
+@media (min-width: 480px) {
+
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+        width:100%;
+        height: 50vh;
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 50vh;
+    
+    }
+    #texto-esquerda img{
+        width:100%;
+        height: 50vh;
+    
+    }
+    
+    h1{
+        font-size: 50px;
+    }
+    .botoes{
+        width: 250px;
+    }
+
+}
+@media (min-width:480px) and (max-width: 992px) {
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+        width:100%;
+        height: 50vh;
+    
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 50vh;
+    
+    }
+    h1{
+        font-size: 50px;
+        padding-bottom: 1em;
+        padding-top: 1em;
+    }
+    .botoes{
+        width: 250px;
+    }
+
+
+
+}
+@media  (min-width: 992px) {
+
+    #home{
+        display:flex;
+        flex-direction:row;
+        justify-content: center;
+        align-items: center;
+       
+    }
+    #texto-esquerda{
+        width:100%;
+        height: 100vh;
+    
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 100vh;
+     
+    
+    }
+    #texto-esquerda img{
+        width:100%;
+        height: 100vh;
+    
+    }
+}
