--- a/src/style/style-pag11.css
+++ b/src/style/style-pag11.css
@@ -5,60 +5,46 @@
     box-sizing: border-box;
 
 }
-#home{
-    display: grid;
-    grid-template-areas:
-        "b . .  ."
-        "b . .  a"
-        "b . .  .";
+
+ 
+h1{
+    font-size: 50px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: left;
+    padding-left: 2em;
+    color: rgb(44, 10, 10);
+    font-weight: 700;
+
+
 }
 
 #texto-esquerda{
     width:100%;
     height: 100vh;
-    display: flex;
-    grid-area: b;
-    justify-content: left;
-    align-items: center;
-}
-#texto-direita{
-    display: flex;
-    grid-area: a;
-    align-items: center;
+    display:flex;
+	flex-direction:column;
     justify-content: center;
-    padding: 6em;
+    align-items: left;
+
+}
+
+#texto-direita{
+ 
+    display:flex;
+    justify-content: center;
+    align-items: center;
 
 }
 #texto-direita img{
-    width:100%;
+    width:70%;
     height: 70vh;
-    object-fit: cover;
-    position: relative;
-
-   
-}
-p{
-    font-size: 25px;
-    position: relative;
-    font-family: 'Open Sans';
-    color: rgb(0, 0, 0);
-    padding-left: 3em;
-    padding-top: 0.5em;
-    text-align: justify;
-}
-
- h1{
-    font-size: 40px;
-    font-family: 'Open Sans', sans-serif;
-    position: relative;
-    text-align: left;
-    color: #393A3F;
-    font-weight: 700;
-    padding-left: 2em;
-    padding-bottom: 0.5em;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 
 
 }
+
 
 .footer{
     display: flex;
@@ -97,4 +83,100 @@ p{
 #botao2:hover{
     scale: 1.1;
     transition: .3s;
+}
+
+
+p{
+    font-size: 25px;
+    font-family: 'Open Sans';
+    color: rgb(0, 0, 0);
+    text-align: justify;
+    padding-left: 4em;
+    padding-right: 4em;
+    padding-top: 1em;
+}
+
+
+
+
+
+/* RESPONSIVIDADE */
+
+@media (min-width: 480px) {
+
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+
+        width:100%;
+        height: 40vh;
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 50vh;
+    
+    
+    }
+    #texto-direita img{
+       
+        width:80%;
+        height: 50vh;
+       
+    
+    }
+    p{
+        font-size: 25px;
+
+    }    
+    
+    h1{
+        font-size: 50px;
+        padding-top: 0;
+    }
+    .botoes{
+        width: 250px;
+    }
+
+}
+@media (min-width:480px) and (max-width: 992px) {
+
+   
+
+}
+
+@media  (min-width: 992px) {
+
+#home{
+    display:flex;
+	flex-direction:row;
+    justify-content: center;
+    align-items: center;
+   
+}
+#texto-esquerda{
+    width:100%;
+    height: 100vh;
+
+}
+#texto-direita{
+    
+    width:70%;
+    height: 70vh;
+
+}
+#texto-direita img{
+    width:70%;
+    height: 70vh;
+}
+h1{
+    font-size: 50px;
+    padding-top: 0;
+}
+p{
+    font-size: 30px;
+
+}    
+
 }
