--- a/src/style/style-pag21.css
+++ b/src/style/style-pag21.css
@@ -133,3 +133,21 @@ h1{
     scale: 1.1;
     transition: .3s;
 }
+
+
+/* RESPONSIVIDADE */
+
+@media (min-width: 480px) {
+
+    #home{
+        flex-direction: column;
+        width:100%;
+        height: 60vh;
+    }
+
+
+    h1{
+        font-size: 40px;
+    }
+}
+
