--- a/src/style-pag1-2-28.css
+++ b/src/style-pag1-2-28.css
@@ -139,10 +139,25 @@
     }
 
     .botoes{
-        width: 350px;
+        width: 50px;
     }
     
     
+}
+@media  (min-width: 1000px) {
+  
+    .botoes{
+        width: 250px;
+    }
+    
+    #texto{
+        width: 100%;
+        height: 50vh;
+    }
+    #imagem-tela{
+        width: 100%;
+        height: 50vh;
+    }
 }
 
 
@@ -160,6 +175,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%; 
 }
 
 
@@ -178,7 +194,7 @@
     
 }
 #texto p{
-    text-align: center;   /* MUDAR PARA JUSTIFY QUANDO FIZER O RESPONSIVO */
+    text-align: center;  
     font-size: 30px;
     font-family: 'Open Sans';
     color: black;
