--- a/src/style-pag1-2-28-30.css
+++ b/src/style-pag1-2-28-30.css
@@ -96,6 +96,7 @@
 
 
 @media (min-width: 480px) {
+   
     #forma{
         object-fit: contain;
         scale: 1.4;  
@@ -158,6 +159,10 @@
         width: 100%;
         height: 50vh;
     }
+
+    #p-pag30{
+        font-size: 25px;
+    }
 }
 
 
@@ -215,4 +220,33 @@
     object-fit: cover;
 }
 
-  
+
+
+
+  /* PAGINA 30 */
+
+  #p-pag30{
+
+    text-align: center;  
+    font-size:25px;
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(255, 255, 255);
+    align-items: center;
+    padding: 25px;
+    font-weight: bold;
+    padding: 0.5em;
+
+  }
+
+  #home28{
+    width: 100%;
+    height: 100vh;
+    background-image: url(imagens/pag30/fundo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: grid;
+    grid-template-areas:
+        "c . b  a"
+        "c . b  ."
+        "c . b  .";
+}
