--- a/src/style-pag1-2-28-30.css
+++ b/src/style-pag1-2-28-30.css
@@ -95,6 +95,8 @@
 }
 
 
+/* RESPONSIVIDADE */
+
 @media (min-width: 480px) {
    
     #forma{
@@ -123,7 +125,11 @@
         font-size: 600px;
         padding: 30px;
     }
-
+    .botoes{
+        width: 250px;
+    }
+  
+    
 }
 
 
@@ -140,7 +146,7 @@
     }
 
     .botoes{
-        width: 50px;
+        width: 250px;
     }
     
     
@@ -238,15 +244,3 @@
 
   }
 
-  #home28{
-    width: 100%;
-    height: 100vh;
-    background-image: url(imagens/pag30/fundo.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: grid;
-    grid-template-areas:
-        "c . b  a"
-        "c . b  ."
-        "c . b  .";
-}
