--- a/src/style/style-pag21.css
+++ b/src/style/style-pag21.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80vh;   
+    height: 100vh;   
 
 
    
@@ -26,6 +26,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
+
 
 }
 
@@ -143,12 +144,13 @@ h1{
         flex-direction: column;
         width:100%;
         height: 60vh;
+        margin-top: 100px;
+        scale: 1.09;
+        
     }
-
-
     h1{
         font-size: 40px;
     }
  
-}
+} 
 
