--- a/src/style/style-pag6.css
+++ b/src/style/style-pag6.css
@@ -6,12 +6,8 @@
 
 }
 #home{
-    background-color:#0096BB;
-    display: grid;
-    grid-template-areas:
-        "b . .  a"
-        "b . .  a"
-        "b . .  a";
+    
+    display: flex;
    
 }
 #texto-esquerda img{
@@ -24,51 +20,57 @@
 }
 
 #texto-esquerda{
-    width:100%;
+    width:50%;
     height: 100vh;
     display: flex;
-    grid-area: b;
     justify-content: left;
     align-items: center;
+    background-color:#0096BB;
+    padding-left: 3em;
+    padding-right: 3em;
+    
+    
 }
 
 #texto-direita{
     display: flex;
-    grid-area: a;
+    width:50%;
+    height: 100vh;
     align-items: center;
     justify-content: center;
-    padding: 6em;
+    background-color: rgb(199, 235, 235);
+    
 
 }
 #texto-direita img{
-    width:100%;
-    height: 70vh;
+    width:600px;
+    height: 600px;
     object-fit: cover;
     position: relative;
     
     
 }
 
-
 p{
-    font-size: 20px;
+    font-size: 25px;
     position: relative;
     font-family: 'Open Sans';
-    color: rgb(0, 0, 0);
-    padding-left: 4em;
+    color:  white;
+    padding-top: 1em;
     text-align: justify;
 }
 
+
  
 h1{
-    font-size: 40px;
+    font-size: 50px;
     font-family: 'Open Sans', sans-serif;
     position: relative;
     text-align: left;
-    color: rgb(0, 0, 0);
+    color: white;
     font-weight: 700;
-    padding-left: 3em;
-    padding-bottom: 1em;
+    padding-left: 1em;
+    padding-bottom: 0.5em;
 
 }
 
@@ -90,7 +92,7 @@ h1{
     padding-bottom: 3em;
 }
 #botao2{
-    width:  250px;
+    width:  150px;
     align-items: right;
     justify-content: right;
     padding-right:5em;
@@ -111,3 +113,99 @@ h1{
     transition: .3s;
 }
 
+
+
+/* RESPONSIVIDADE */
+
+@media (min-width: 480px) {
+
+    #titulo h1{
+        font-size: 60px;
+    }
+    
+    #texto p{
+        text-align: justify;  
+        font-size: 600px;
+
+    }
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+        width:100%;
+        height: 50vh;
+    
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 50vh;
+    
+    
+    }
+    #texto-esquerda img{
+        width:100%;
+        height: 50vh;
+    }
+        
+
+}
+@media (min-width:768px) and (max-width: 992px) {
+   
+    #home{
+        flex-direction: column;
+    }
+    #texto-esquerda{
+        width:100%;
+        height: 50vh;
+    
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 50vh;
+    
+    
+    }
+    p{
+        font-size: 30px;
+    }
+
+#texto-direita img{
+    width:400px;
+    height: 400px;
+}
+
+}
+
+
+ @media  (min-width: 992px) {
+    #home{
+        display:flex;
+        flex-direction:row;
+        justify-content: center;
+        align-items: center;
+       
+    }
+    p{
+        font-size: 25px;
+       
+    }
+   
+    #texto-esquerda{
+        width:100%;
+        height: 100vh;
+    
+    }
+    
+    #texto-direita{
+        width:100%;
+        height: 100vh;
+    
+    }
+    #texto-direita img{
+        width:400px;
+        height: 400px;
+    }
+    
+}
