--- a/src/style/style-pag21.css
+++ b/src/style/style-pag21.css
@@ -15,6 +15,15 @@
 
    
 }
+#container{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;   
+
+}
 #quadrado-1{
     display: grid;
     grid-template-columns: 50% 50%;
@@ -36,7 +45,9 @@ p{
     font-family: 'Open Sans';
     color: rgb(0, 0, 0);
     text-align: justify;
-    padding: 2em;
+    padding-right: 2em;
+    padding-left: 1em;
+    padding-top: 2em;
 
 }
 .mini1{
@@ -45,7 +56,6 @@ p{
     display: flex;
     grid-column-start: 1;
     grid-row-start:1;
-   
 
 }
 .mini2{
@@ -56,6 +66,7 @@ p{
     grid-column-start:2;
     grid-row-start:1;
    
+   
 
 }
 .mini3{
@@ -65,6 +76,7 @@ p{
     display: flex;
     grid-column-start:1;
     grid-row-start:2;
+    
   
 }
 .mini4{
@@ -139,18 +151,49 @@ h1{
 /* RESPONSIVIDADE */
 
 @media (min-width: 480px) {
-
     #home{
+        width:100%;
+        height: 100vh;
+    
+    }
+
+    #container{
         flex-direction: column;
         width:100%;
         height: 60vh;
-        margin-top: 100px;
         scale: 1.09;
         
     }
     h1{
         font-size: 40px;
     }
+    p{
+        font-size: 15px;
+    }
  
-} 
-
+}
+@media (min-width:768px) and (max-width: 992px) {
+   
+    #container{
+        flex-direction: column;
+        margin-top:150px;
+        scale: 1.09;
+    }
+  
+    
+}
+@media (min-width:992px){
+    #home{
+        width: 100%;
+        height: 100vh;
+    
+    }
+    #container{
+        flex-direction: row;
+        width:100%;
+        height: 100vh;   
+    
+    }
+   
+    
+}
