--- a/src/style/style-pag21.css
+++ b/src/style/style-pag21.css
@@ -150,7 +150,7 @@ h1{
 
 /* RESPONSIVIDADE */
 
-@media (min-width: 480px) {
+@media (min-width: 480px){
     #home{
         width:100%;
         height: 100vh;
@@ -160,6 +160,7 @@ h1{
     #container{
         flex-direction: column;
         width:100%;
+        margin-bottom: 450px;
         height: 60vh;
         scale: 1.09;
         
@@ -172,26 +173,41 @@ h1{
     }
  
 }
-@media (min-width:768px) and (max-width: 992px) {
-   
-    #container{
-        flex-direction: column;
-        margin-top:150px;
-        scale: 1.09;
-    }
-  
-    
-}
-@media (min-width:992px){
-    #home{
-        width: 100%;
+/* @media (min-width:768px) and (max-width:900px){
+   #home{
+        width:100%;
         height: 100vh;
     
     }
+
+    #container{
+        flex-direction: column;
+        width:100%;
+        height: 40vh;
+    
+        
+    }
+    h1{
+        font-size: 40px;
+    }
+    p{
+        font-size: 15px;
+    }
+   
+ 
+} */
+
+
+
+@media (min-width:992px){
+    
     #container{
         flex-direction: row;
+        scale: 0.99;
         width:100%;
         height: 100vh;   
+        margin-top: 250px;
+   
     
     }
    
