--- a/src/style/syle-pag22a27.css
+++ b/src/style/syle-pag22a27.css
@@ -166,8 +166,11 @@ label img{
         height: 50vh;
     
     }
-    p{
-        font-size: 40px;
+    .texto-resposta{
+        font-size: 30px;
+    }
+   .texto-clique{
+    font-size: 40px;
     }
     
 }
