--- a/src/style-pag1-2-28-30.css
+++ b/src/style-pag1-2-28-30.css
@@ -116,17 +116,22 @@
     #titulo-apresentacao{
         font-size: 60px;
     }
-    #texto p{
-        font-size: 30px;
+    #texto{
+        justify-content: center;
+        align-items: center;
     }
 
     #texto p{
         text-align: justify;  
         font-size: 600px;
         padding: 30px;
+        font-size: 30px;
     }
     .botoes{
         width: 250px;
+    }
+    #p-pag30{
+        font-size: 30px;
     }
   
     
@@ -148,6 +153,10 @@
     .botoes{
         width: 250px;
     }
+    #p-pag30{
+        font-size: 30px;
+    }
+  
     
     
 }
@@ -165,10 +174,11 @@
         width: 100%;
         height: 50vh;
     }
-
     #p-pag30{
-        font-size: 25px;
+        font-size: 30px;
     }
+
+    
 }
 
 
