--- a/src/style/style-pag3.css
+++ b/src/style/style-pag3.css
@@ -103,13 +103,14 @@ h2{
 
 @media (min-width: 480px) {
 
-    #titulo h1{
-        font-size: 60px;
+    h2{
+        font-size: 50px;
     }
     
-    #texto p{
+    p{
         text-align: justify;  
-        font-size: 600px;
+        
+        font-size: 30px;
 
     }
     #home{
@@ -130,6 +131,9 @@ h2{
     #texto-esquerda img{
         width:100%;
         height: 50vh;
+    }
+    li{
+        font-size: 30px;
     }
         
 
