--- a/src/style/style-pag19-20-29.css
+++ b/src/style/style-pag19-20-29.css
@@ -107,9 +107,6 @@ h1{
     .botoes{
         width: 250px;
     }
-    p{
-        font-size: 30px;
-    }
 
 }
 @media (min-width:480px) and (max-width: 992px) {
@@ -140,7 +137,6 @@ h1{
     }
 
 
-
 }
 @media  (min-width: 992px) {
 
@@ -167,5 +163,11 @@ h1{
         width:100%;
         height: 100vh;
     
+    }
+    p{
+        font-size: 25px;
+    }
+    .botoes{
+        width: 250px;
     }
 }
